@@ -7,61 +7,58 @@ buildscript {
     }
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
-        classpath "io.franzbecker:gradle-lombok:1.11"
     }
 }
 
-apply plugin: 'java'
+plugins {
+    //id "io.franzbecker.gradle-lombok" version "1.11"
+    id 'java'
+    id 'application'
+    id 'net.ltgt.apt' version '0.10'
+}
 apply plugin: 'org.junit.platform.gradle.plugin'
-apply plugin: 'application'
-apply plugin: "io.franzbecker.gradle-lombok"
 
 group 'com.detoeuf'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 9
+mainClassName = "com.detoeuf.test.Application"
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    junit4Version = '4.12'
-    junitVintageVersion = '4.12.2'
-    junitPlatformVersion = '1.0.2'
     junitJupiterVersion = '5.0.2'
+    logbackVersion = '1.2.3'
+    lombokVersion = '1.16.18'
 }
 
-mainClassName = "com.detoeuf.test.Application"
+tasks.withType(JavaCompile) { // see note below
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+    ]
+}
 
 dependencies {
     compile 'io.vavr:vavr:0.9.1'
 
+    compileOnly files("lib/lombok-edge.jar")
+
     compile "org.slf4j:slf4j-api:1.7.25"
-    compile "ch.qos.logback:logback-core:1.2.3"
-    compile "ch.qos.logback:logback-classic:1.2.3"
+    compile "ch.qos.logback:logback-core:${logbackVersion}"
+    compile "ch.qos.logback:logback-classic:${logbackVersion}"
 
     testCompile 'org.assertj:assertj-core:3.8.0'
-    testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
-    testCompile("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
+    testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    testCompile "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
 }
-
-junitPlatform {
-    // platformVersion '1.0.2'
-    filters {
-        engines {
-            // include 'junit-jupiter', 'junit-vintage'
-            // exclude 'custom-engine'
-        }
-        tags {
-            // include 'fast'
-            exclude 'slow'
-        }
-        // includeClassNamePattern '.*Test'
-    }
-    // configurationParameter 'junit.jupiter.conditions.deactivate', '*'
-    // enableStandardTestTask true
-    // reportsDir file('build/test-results/junit-platform') // this is the default
-    logManager 'org.apache.logging.log4j.jul.LogManager'
-}
-
